bazaar items.json indexing